Update tests and implementation of get all categories by using email as param in the public endpoint
